fix: remove player info margin and prevent image from stretching

--- a/src/styles/components/_player.scss
+++ b/src/styles/components/_player.scss
@@ -11,6 +11,7 @@
 }
 
 .player-general-info__image-tag {
+    align-items: center;
     display: flex;
     position: relative;
 }
@@ -28,7 +29,6 @@
 
 .player-general-info__name {
     font-size: 4.5rem;
-    margin-bottom: $m-size;
 }
 
 .player-general-info__tag {
